--- a/01/new_file.html
+++ b/01/new_file.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
+<head>
+	
+	<title>个人简历基础信息填写</title>
+	<meta name="keywords" content="可以用来填写个人信息简历"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+</head>
+<body>
+	
+	<header>
+	<h1>个人简历基础信息填写</h1>
+	 <p>早日能找到工作</p>
+	 </header>
+	 <picture>
+		 <source srcset="img/u=1623822001,3229730063&fm=26&gp=0.jpg.png"media="(min-width:800px)"/>
+		 <<img src="img/u=2888932313,3692581658&fm=26&gp=0.jpg.png" >
+	 </picture>
+				<main>
+				<input type="text" placeholder="姓名" tabindex="1"><p>
+			    <input type="text" placeholder="手机号码" tabindex="2"><p>
+			    <input type="text" placeholder="邮箱" tabindex="3"><p>
+				<input type="text" placeholder="年龄"tabindex="4"><p>
+				<input type="text" placeholder="住址"tabindex="5"><p>
+				<input type="text" placeholder="工作经验"tabindex="6"><p>
+				<input type="text" placeholder="从事职业"tabindex="7"><p>
+				</main>
+				<footer>
+					<P>版权&copy;所有</P>
+					<address>
+						软件技术191
+					</address>
+				</footer>
+				<!--此次新增的音频代码-->
+                <audio  autoplay="autoplay" controls="controls"  loop="loop">
+	             <source src="img/audio.ogg"type="audio/ogg">
+				 <source src="img/Masque_Jupiter%20-%20Believe%C2%A0me%C2%A0（纯钢琴）.mp3"type="audio/mp3">
+                  </audio>
+</body>
 </html>
