--- a/01/111.html
+++ b/01/111.html
@@ -12,11 +12,11 @@
 			text-align: center;
 			width: 300px;
 			height: 200px;
-			background-color:bisque;
-			color:#27ff76;
+			background-color:#786eff;
+			color:#550000;
 		}
 		strong{
-			color: #ff6fcd;
+			color: #5500ff;
 		}
 		P{
 			font-size: 28px;
@@ -25,7 +25,7 @@
 			font-size: 14px;
 		}
 		.y{
-			font-family: "bodoni mt";
+			font-family: "blackadder itc";
 		}
 	</style>	
 	</head>
